# openai-cli

./: README.md  client.py  install.sh  main.py  memory.py  pyproject.toml  repl.py  requirements.txt  ui.py  utils.py
